--- a/client/src/Components/Home/home.css
+++ b/client/src/Components/Home/home.css
@@ -1,14 +1,17 @@
 .grid-container {
+    /*Las cards se muestran de 4 columnas*/
    display: grid;
    grid-template-columns: auto auto auto auto;
    justify-content: center;
    width: 80%;
+   /*espaciado entre cards*/
    margin: auto auto; 
    margin-top: 30px;
    
 }
 
 .card {
+    
     text-transform: capitalize;
     width: 270px;
     height: 300px;
@@ -19,9 +22,10 @@
     border-style: dashed;
     padding: 15px;
     margin: 35px;
+    /*sombras en las cards*/
     box-shadow: 28px 26px 20px -11px rgba(0,0,0,0.44);
--webkit-box-shadow: 28px 26px 20px -11px rgba(0,0,0,0.44);
--moz-box-shadow: 28px 26px 20px -11px rgba(0,0,0,0.44);
+    -webkit-box-shadow: 28px 26px 20px -11px rgba(0,0,0,0.44);
+    -moz-box-shadow: 28px 26px 20px -11px rgba(0,0,0,0.44);
 }
 
 
