--- a/client/src/Components/LandingPage/landingPage.css
+++ b/client/src/Components/LandingPage/landingPage.css
@@ -1,4 +1,5 @@
 .landing-page {
+    /*imagen de fondo y posicionamiento*/
     background-image: url('../../utils/backgoundPokes.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,13 +8,11 @@
 }
 
 .container-h1 {
-    
     color:#F8f8f8;
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 200px
-
 }
 
 .welcome {
@@ -28,7 +27,7 @@
 }
 
 .button {
- 
+ /*posicion del boton JOIN y colores*/
  position: relative;
  padding: 10px 40px;
  margin: 0px 10px 10px 0px;
@@ -46,8 +45,7 @@
  
 }
 
-/*afecta todos los botones*/
-
+/* efetto del boton JOIN*/
 .button:hover, .button:active {
     -webkit-transform: translate(0px,5px);
     -ms-transform: translate(0px,5px);
@@ -55,6 +53,7 @@
     border-bottom: 1px solid #2ecc71;
    }
 
+   /*posicion del texto de presentacion*/
 .footer {
     position: absolute;
     width: 100%;
